--- a/themes/growth-sketch/assets/scss/layout/_header.scss
+++ b/themes/growth-sketch/assets/scss/layout/_header.scss
@@ -3,6 +3,8 @@
 .navbar {
     height: $navbar-height;
     background-color: $primary-clr--light!important;
+    // box-shadow secondary color
+    box-shadow: 0px 3px 10px 0px rgb(26, 140, 255);
     .navbar-brand {
         img {
             width: clamp(50px, 60px, 12vw);
@@ -10,10 +12,14 @@
 
         .brand-name {
             // font-size: min(1rem, 1.1rem);
-            h6{
-                font-size: 1.5rem;
+            .brand{
+                // font-size: 1.5rem;
+                font-weight: normal;
+                @media(max-width:768px){
+                    font-size: 1.5rem;
+                }
             }
-            em{
+            .tagline{
                 font-weight: bold;
                 font-family: $font-daniel;
             }
@@ -39,13 +45,25 @@
     //     background-image: url('hamburger-icon.svg');
     // }
     .nav-item {
+        font-size: 1.2rem;
+        letter-spacing: 1px;
+        padding-block: 1rem;
+        @media(max-width:991px){
+            font-size: 1rem;
+        }
+        
+        // font-weight: 700;
         .dropdown-menu{
             min-width: fit-content;
             background-color: lighten($primary-clr, 70%);
+            li{
+                padding-block: 1rem;
+            }
         }
-
+       
         .nav-link,
         .dropdown-item {
+            padding-block: 0;
             color: $primary-clr;
         }
 
