--- a/themes/growth-sketch/layouts/partials/menu.html
+++ b/themes/growth-sketch/layouts/partials/menu.html
@@ -12,11 +12,11 @@ Renders a menu for the given menu ID.
 
 <nav class="navbar navbar-expand-md navbar-light fixed-top p-0">
   <div class="container">
-    <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0" href="/">
+    <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0 text-decoration-none" href="/">
       <img src="/images/logo.png" alt="ESPeople logo" title="ESPeople logo">
       <div class="brand-name">
-        <h6 class=" mb-0">ESPeople</h6>
-        <em>TrainingSmiths</em>
+        <h2 class="brand mb-0">ESPeople</h2>
+        <p class="tagline mb-0">TrainingSmiths</p>
       </div>
     </a>
 
