--- a/themes/growth-sketch/assets/scss/abstracts/_variables.scss
+++ b/themes/growth-sketch/assets/scss/abstracts/_variables.scss
@@ -43,10 +43,8 @@ $card-shadow-dark: #cfcfd4;
 
 
 // Typography
-$font-primary: "EB Garamond", serif;;
-$font-secondary: 'Montserrat', sans-serif;
-$font-tertiary: 'Lato', sans-serif;
-$font-daniel: 'Daniel', sans-serif;
+$font-body: 'Lato', sans-serif;
+$font-daniel: 'Daniel', cursive;
 
 $base-font-size: 16px;
 $base-line-height: 1.5;
@@ -62,4 +60,4 @@ $sizes: (); // An empty map to store the size values
   // Store the sizes in the map
   $sizes: map-merge($sizes, ($size: $size-value));
 }
-$navbar-height: 10vh
+$navbar-height: 12vh
