--- a/themes/growth-sketch/assets/scss/base/_reset.scss
+++ b/themes/growth-sketch/assets/scss/base/_reset.scss
@@ -2,48 +2,53 @@
 
 html {
     scroll-behavior: smooth;
-
-    @media(max-width:425px){
-        font-size: 14.5px;
+    // font-size: 17px;
+    @media(max-width:425px) {
+        font-size: 14px;
     }
 }
 
 body {
-    // background-color: $primary-clr;
-    // font-family: $font-tertiary;
     overflow-x: hidden;
-    // padding-top: $navbar-height;
     // scroll-padding: map-get($sizes, 600)
     padding-top: $navbar-height;
+    font-family: $font-body;
+}
+p{
+
+    line-height: 1.6;
+}
+[data-aos] {
+    transform-origin: center; // Ensure animation originates within the visible viewport
+    max-width: 100%; // Prevent overflowing elements
 }
 
-h1 {
-    // font-family: $font-enchanting;
-    line-height: 1.3 !important;
+@media (max-width: 768px) {
+    [data-aos] {
+        transform: none; // Minimize aggressive animations for smaller screens
+    }
 }
 
-h1, 
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: $font-primary;
-}
+// h1 {
+//     line-height: 1.3 !important;
+// }
 
-h4 {
-    line-height: 1.7;
-}
+
+
+// h4 {
+//     line-height: 1.7;
+// }
 
 li {
     font-size: 1.1rem;
-    line-height: 1.6rem;
+    // line-height: 1.6rem;
 }
 
 a {
     text-decoration: none;
     color: $primary-clr--dark;
-    &:hover{
+
+    &:hover {
 
         text-decoration: underline;
     }
@@ -54,6 +59,7 @@ img {
     height: auto;
     /* display: block; */
 }
+
 // .fa, .fab, .fas{
 //     color: $accent-clr;
 // }
