--- a/themes/growth-sketch/assets/scss/base/_typography.scss
+++ b/themes/growth-sketch/assets/scss/base/_typography.scss
@@ -16,8 +16,34 @@
     font-weight: 900; // Black weight (heaviest)
   }
   
-  // Usage example
-//   body {
-//     font-family: 'Daniel', sans-serif;
-//   }
+  @mixin heading-style($size, $weight, $spacing: 0) {
+    font-family: "Playfair Display", serif;
+    font-size: $size;
+    font-weight: $weight;
+    letter-spacing: $spacing;
+    font-optical-sizing: auto;
+    line-height: 1.3; // Adjust for readability
+  }
   
+  // Heading Styles
+  h1, .h1 {
+    @include heading-style(2.5rem, bold, 0.5px); // Main Headline
+  }
+  
+  h2, .h2 {
+    @include heading-style(2rem, 600); // Subheading (Semi-Bold)
+  }
+  
+  h3, .h3 {
+    @include heading-style(1.5rem, bold); // Section Titles or Highlighted Points
+  }
+  // write for h4 to h6
+  h4, .h4 {
+    @include heading-style(1.2rem, 600); // Sub-subheading 
+  }
+  h5, .h5 {
+    @include heading-style(1rem, 400); // Smaller sub-subheading
+  }
+  h6, .h6 {
+    @include heading-style(0.8rem, 400); // Smallest sub-subheading
+  }
